@@ -27,8 +27,9 @@ MASTERSIZE 52
 ATTACHASIDE 1
 # if new window is in the stack add it at the top
 TOPSTACK 1
-# default tiling mode: 0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
-DEFAULTMODE 0
+# default tiling modes for each desktop(defaults to 0):
+#     0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
+DEFAULTMODE 3;4;0;1;2;3;
 # For semi transparent unfocused windows if using a compositor e.g. compton
 UF_WIN_ALPHA 65
 # only one of FOLLOWMOUSE and CLICKTOFOCUS should be zero, but none have to be
